force-app/main/default/objects/Counselling_Program__c/Counselling_Program__c.object-meta.xml
<CustomObject>
    <label>Program*</label>
    <nameField>
        <displayFormat>PN{0000}</displayFormat>
        <label>Program No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program*</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>