force-app/main/default/objects/Counselling_Program__c/fields/Exam_Year__c.field-meta.xml
<CustomField>
    <fullName>Exam_Year__c</fullName>
    <label>Exam Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>