force-app/main/default/objects/Counselling_Program__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mode</label>
    <referenceTo>Mode__c</referenceTo>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>