force-app/main/default/objects/Counselling_Program__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Variant__c.Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Variant__c</referenceTo>
    <relationshipLabel>Program*</relationshipLabel>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>